<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/loaned1"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="16.32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="19.2dp"
            android:layout_marginTop="3.84dp"
            android:text="@string/twentythousand"
            android:id="@+id/textView2"
            android:textColor="#000000"
            android:textSize="16.32dp"
            android:layout_below="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="19.2dp"
            android:layout_marginTop="3.84dp"
            android:text="@string/thirtythousand"
            android:id="@+id/textView3"
            android:textColor="#000000"
            android:textSize="16.32dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="33.6dp"
            android:layout_marginRight="33.6dp"
            android:layout_marginTop="3.84dp"
            android:id="@+id/seekBar"
            android:progressDrawable="@drawable/seekbar_style"
            android:max="4"
            android:thumb="@drawable/seekbar_thumb" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:width="97.92dp"
            android:text="@string/apr"
            android:id="@+id/switch1"
            android:textStyle="bold"
            android:textSize="16.32dp"
            android:checked="true"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch1"
            android:layout_marginTop="7.68dp"
            android:gravity="center">

            <Button
                android:layout_width="144.96dp"
                android:layout_height="63.36dp"
                android:layout_centerVertical="true"
                android:text="@string/directperkinsloan"
                android:id="@+id/button"
                android:textSize="13.44dp"
                android:background="#999999"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle" />

            <ImageButton
                android:layout_width="67.2dp"
                android:layout_height="67.2dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="-0.96dp"
                android:layout_toEndOf="@+id/button"
                android:id="@+id/imageButton"
                android:src="@drawable/down_arrow_button"
                android:scaleType="fitXY"
                android:contentDescription="@string/imagebutton"
                android:padding="0dp" />

            <ImageButton
                android:layout_width="65.28dp"
                android:layout_height="65.28dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/button"
                android:id="@+id/imageButton2"
                android:src="@drawable/down_arrow_button"
                android:scaleType="fitXY"
                android:contentDescription="@string/imagebutton"
                android:padding="0dp" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/paymonthly1"
            android:id="@+id/textView4"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="16.32dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="9.6dp"
            android:id="@+id/relativeLayout">

            <ImageButton
                android:layout_width="67.2dp"
                android:layout_height="67.2dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="-0.96dp"
                android:layout_toStartOf="@+id/textView5"
                android:id="@+id/imageButton3"
                android:src="@drawable/down_button"
                android:scaleType="fitXY"
                android:contentDescription="@string/imagebutton"
                android:padding="0dp" />

            <ImageButton
                android:layout_width="65.28dp"
                android:layout_height="65.28dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/textView5"
                android:id="@+id/imageButton4"
                android:src="@drawable/down_button"
                android:scaleType="fitXY"
                android:contentDescription="@string/imagebutton"
                android:padding="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:width="88.32dp"
                android:height="63.36dp"
                android:background="#999999"
                android:gravity="center"
                android:text="@string/amount"
                android:id="@+id/textView5"
                android:textColor="#000000"
                android:textSize="16.32dp" />

            <ImageButton
                android:layout_width="67.2dp"
                android:layout_height="67.2dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="-0.96dp"
                android:layout_toEndOf="@+id/textView5"
                android:id="@+id/imageButton5"
                android:src="@drawable/up_button"
                android:scaleType="fitXY"
                android:contentDescription="@string/imagebutton"
                android:padding="0dp" />

            <ImageButton
                android:layout_width="65.28dp"
                android:layout_height="65.28dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/textView5"
                android:id="@+id/imageButton6"
                android:src="@drawable/up_button"
                android:scaleType="fitXY"
                android:contentDescription="@string/imagebutton"
                android:padding="0dp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/relativeLayout"
            android:layout_marginTop="5.76dp"
            android:text="@string/minimum"
            android:id="@+id/textView6"
            android:textStyle="italic"
            android:textColor="#0000FF"
            android:textSize="16.32dp" />

        <ListView
            android:layout_width="294.72dp"
            android:layout_height="83.52dp"
            android:id="@+id/listView"
            android:background="@drawable/rounded_corners"
            android:layout_alignTop="@+id/textView4"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:id="@+id/relativeLayout3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="33.6dp"
                android:layout_toStartOf="@+id/textView13"
                android:text="@string/estsavings"
                android:id="@+id/textView12"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16.32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="33.6dp"
                android:width="115.2dp"
                android:height="29.76dp"
                android:background="#33CC66"
                android:gravity="center"
                android:text="@string/zero"
                android:id="@+id/textView13"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="16.32dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/relativeLayout2"
            android:layout_marginBottom="19.2dp"
            android:layout_marginEnd="33.6dp"
            android:text="@string/months"
            android:textColor="#000000"
            android:textSize="16.32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView11"
            android:layout_marginEnd="7.68dp"
            android:layout_toStartOf="@+id/textView11"
            android:gravity="end"
            android:text="@string/ten"
            android:id="@+id/textView10"
            android:textColor="#000000"
            android:textSize="16.32dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:id="@+id/relativeLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="33.6dp"
                android:layout_toStartOf="@+id/textView8"
                android:text="@string/esttime"
                android:id="@+id/textView7"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16.32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="7.68dp"
                android:layout_toStartOf="@+id/textView9"
                android:gravity="end"
                android:text="@string/hundredninetyseven"
                android:id="@+id/textView8"
                android:textColor="#000000"
                android:textSize="16.32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="48.96dp"
                android:text="@string/years"
                android:id="@+id/textView9"
                android:textColor="#000000"
                android:textSize="16.32dp" />
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>